ENH: write data out to files

--- a/notebooks/Hands-On Machine Learning with Scikit-Learn, Keras & TensorFlow/Chapter_10-Keras.ipynb
+++ b/notebooks/Hands-On Machine Learning with Scikit-Learn, Keras & TensorFlow/Chapter_10-Keras.ipynb
@@ -161,6 +161,113 @@
     "\n",
     "fig.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Save Data to Files\n",
+    "\n",
+    "This will more mimic an actual use case where the images are too large to be held in memory.\n",
+    "\n",
+    "To use the following structure:\n",
+    "```\n",
+    "data_dir/\n",
+    "  train_dir/\n",
+    "    class_0/\n",
+    "      #.jpg\n",
+    "      #.jpg\n",
+    "    ...\n",
+    "    class_n/\n",
+    "      #.jpg\n",
+    "      #.jpg\n",
+    "  val_dir/\n",
+    "    class_0/\n",
+    "      #.jpg\n",
+    "      #.jpg\n",
+    "    ...\n",
+    "    class_n/\n",
+    "      #.jpg\n",
+    "      #.jpg\n",
+    "  test_dir/\n",
+    "    class_0/\n",
+    "      #.jpg\n",
+    "      #.jpg\n",
+    "    ...\n",
+    "    class_n/\n",
+    "      #.jpg\n",
+    "      #.jpg\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Save Data to Files\n",
+    "\n",
+    "This will more mimic an actual use case where the images are too large to be held in memory.\n",
+    "\n",
+    "To use the following structure:\n",
+    "```\n",
+    "data_dir/\n",
+    "  train_dir/\n",
+    "    class_0/\n",
+    "      #.jpg\n",
+    "      #.jpg\n",
+    "    ...\n",
+    "    class_n/\n",
+    "      #.jpg\n",
+    "      #.jpg\n",
+    "  val_dir/\n",
+    "    class_0/\n",
+    "      #.jpg\n",
+    "      #.jpg\n",
+    "    ...\n",
+    "    class_n/\n",
+    "      #.jpg\n",
+    "      #.jpg\n",
+    "  test_dir/\n",
+    "    class_0/\n",
+    "      #.jpg\n",
+    "      #.jpg\n",
+    "    ...\n",
+    "    class_n/\n",
+    "      #.jpg\n",
+    "      #.jpg\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datasets = {\n",
+    "    'train': Data(x_train, y_train),\n",
+    "    'val': Data(x_val, y_val),\n",
+    "    'test': Data(x_test, y_test),\n",
+    "}\n",
+    "\n",
+    "for name, data in datasets.items():\n",
+    "    print(f'Saving Dataset Images: {name}')\n",
+    "    # create directories\n",
+    "    labels = np.unique(data.labels)\n",
+    "    for label in labels:\n",
+    "        (DATA_DIR / name / classes_idx[label]).mkdir(parents=True,\n",
+    "                                                     exist_ok=True)\n",
+    "    # save images\n",
+    "    with concurrent.futures.ProcessPoolExecutor() as pool:\n",
+    "        futures = []\n",
+    "        for im, label in zip(data.features, data.labels):\n",
+    "            path = (DATA_DIR / name / classes_idx[label]\n",
+    "                    / f'{hashlib.sha256(im).hexdigest()}.png')\n",
+    "            if not path.is_file():\n",
+    "                futures.append(pool.submit(cv2.imwrite, str(path), im))\n",
+    "        for f in concurrent.futures.as_completed(futures):\n",
+    "            f.result()"
+   ]
   }
  ],
  "metadata": {
