ENH: add image preprocessing

--- a/notebooks/Hands-On Machine Learning with Scikit-Learn, Keras & TensorFlow/Chapter_10-Keras.ipynb
+++ b/notebooks/Hands-On Machine Learning with Scikit-Learn, Keras & TensorFlow/Chapter_10-Keras.ipynb
@@ -201,44 +201,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Save Data to Files\n",
-    "\n",
-    "This will more mimic an actual use case where the images are too large to be held in memory.\n",
-    "\n",
-    "To use the following structure:\n",
-    "```\n",
-    "data_dir/\n",
-    "  train_dir/\n",
-    "    class_0/\n",
-    "      #.jpg\n",
-    "      #.jpg\n",
-    "    ...\n",
-    "    class_n/\n",
-    "      #.jpg\n",
-    "      #.jpg\n",
-    "  val_dir/\n",
-    "    class_0/\n",
-    "      #.jpg\n",
-    "      #.jpg\n",
-    "    ...\n",
-    "    class_n/\n",
-    "      #.jpg\n",
-    "      #.jpg\n",
-    "  test_dir/\n",
-    "    class_0/\n",
-    "      #.jpg\n",
-    "      #.jpg\n",
-    "    ...\n",
-    "    class_n/\n",
-    "      #.jpg\n",
-    "      #.jpg\n",
-    "```"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -267,6 +229,40 @@
     "                futures.append(pool.submit(cv2.imwrite, str(path), im))\n",
     "        for f in concurrent.futures.as_completed(futures):\n",
     "            f.result()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Preprocess Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scale_factor = 1 / np.iinfo(x_train.dtype).max\n",
+    "\n",
+    "im_gen_train = tf.keras.preprocessing.image.ImageDataGenerator(\n",
+    "    horizontal_flip=True,\n",
+    "    rescale=scale_factor,\n",
+    "    )\n",
+    "\n",
+    "im_gen_val = tf.keras.preprocessing.image.ImageDataGenerator(\n",
+    "    rescale=scale_factor,\n",
+    "    )\n",
+    "\n",
+    "train_gen = im_gen_train.flow_from_directory(\n",
+    "    x_train,\n",
+    "    y_train,\n",
+    "    batch_size=64,\n",
+    "    directory=,\n",
+    "    shuffle=True,\n",
+    "    \n",
+    ")"
    ]
   }
  ],
