ENH: add visualization of preprocessed data

--- a/notebooks/Hands-On Machine Learning with Scikit-Learn, Keras & TensorFlow/Chapter_10-Keras.ipynb
+++ b/notebooks/Hands-On Machine Learning with Scikit-Learn, Keras & TensorFlow/Chapter_10-Keras.ipynb
@@ -21,6 +21,7 @@
     "from pathlib import Path\n",
     "\n",
     "import cv2\n",
+    "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import plotly.graph_objects as go\n",
     "import numpy as np\n",
@@ -52,9 +53,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Data = namedtuple('Data', 'features, labels')\n",
+    "DATA_DIR = utils.package_dir() / 'data'/ 'ch10'\n",
+    "TRAIN_DIR = DATA_DIR / 'train'\n",
+    "VAL_DIR = DATA_DIR / 'val'\n",
+    "TEST_DIR = DATA_DIR / 'test'\n",
     "\n",
-    "DATA_DIR = utils.package_dir() / 'data'/ 'ch10'"
+    "BATCH_SIZE = 64"
    ]
   },
   {
@@ -206,24 +210,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "datasets = {\n",
-    "    'train': Data(x_train, y_train),\n",
-    "    'val': Data(x_val, y_val),\n",
-    "    'test': Data(x_test, y_test),\n",
-    "}\n",
+    "datasets = (\n",
+    "    (x_train, y_train, TRAIN_DIR),\n",
+    "    (x_val, y_val, VAL_DIR),\n",
+    "    (x_test, y_test, TEST_DIR),\n",
+    ")\n",
     "\n",
-    "for name, data in datasets.items():\n",
-    "    print(f'Saving Dataset Images: {name}')\n",
+    "for x, y, directory in datasets:\n",
+    "    print(f'Saving Dataset Images: {directory}')\n",
     "    # create directories\n",
-    "    labels = np.unique(data.labels)\n",
-    "    for label in labels:\n",
-    "        (DATA_DIR / name / classes_idx[label]).mkdir(parents=True,\n",
-    "                                                     exist_ok=True)\n",
+    "    for label in np.unique(y):\n",
+    "        (directory / classes_idx[label]).mkdir(parents=True,\n",
+    "                                               exist_ok=True)\n",
     "    # save images\n",
     "    with concurrent.futures.ProcessPoolExecutor() as pool:\n",
     "        futures = []\n",
-    "        for im, label in zip(data.features, data.labels):\n",
-    "            path = (DATA_DIR / name / classes_idx[label]\n",
+    "        for im, label in zip(x, y):\n",
+    "            path = (directory / classes_idx[label]\n",
     "                    / f'{hashlib.sha256(im).hexdigest()}.png')\n",
     "            if not path.is_file():\n",
     "                futures.append(pool.submit(cv2.imwrite, str(path), im))\n",
@@ -255,14 +258,37 @@
     "    rescale=scale_factor,\n",
     "    )\n",
     "\n",
-    "train_gen = im_gen_train.flow_from_directory(\n",
-    "    x_train,\n",
-    "    y_train,\n",
-    "    batch_size=64,\n",
-    "    directory=,\n",
+    "train_data_gen = im_gen_train.flow_from_directory(\n",
+    "    TRAIN_DIR,\n",
+    "    batch_size=BATCH_SIZE,\n",
+    "    color_mode='grayscale',\n",
+    "    class_mode='categorical',\n",
+    "    seed=42,\n",
     "    shuffle=True,\n",
-    "    \n",
+    "    target_size=(28, 28),\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Visualize Preprocessed Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x, y = next(train_data_gen)\n",
+    "data_gen_classes = {v: k for k, v in train_data_gen.class_indices.items()}\n",
+    "for n in range(10):\n",
+    "    ax = plt.subplot(2, 5, n + 1)\n",
+    "    ax.imshow(x[n], cmap='gray')\n",
+    "    ax.set_title(data_gen_classes[np.argmax(y[n])])\n",
+    "    ax.axis('off')"
    ]
   }
  ],
