--- a/notebooks/Hands-On Machine Learning with Scikit-Learn, Keras & TensorFlow/Chapter_10-Keras.ipynb
+++ b/notebooks/Hands-On Machine Learning with Scikit-Learn, Keras & TensorFlow/Chapter_10-Keras.ipynb
@@ -19,6 +19,7 @@
     "import concurrent.futures\n",
     "import hashlib\n",
     "from pathlib import Path\n",
+    "import time\n",
     "\n",
     "import cv2\n",
     "import matplotlib.pyplot as plt\n",
@@ -27,6 +28,7 @@
     "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
     "import tensorflow as tf\n",
+    "from tensorflow.keras.layers import Conv2D, Dense, Flatten, InputLayer\n",
     "\n",
     "from tensorflow_2 import utils"
    ]
@@ -44,6 +46,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Configure Notebook"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext tensorboard"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Variables"
    ]
   },
@@ -54,11 +72,30 @@
    "outputs": [],
    "source": [
     "DATA_DIR = utils.package_dir() / 'data'/ 'ch10'\n",
+    "LOG_DIR = DATA_DIR / 'logs'\n",
     "TRAIN_DIR = DATA_DIR / 'train'\n",
     "VAL_DIR = DATA_DIR / 'val'\n",
     "TEST_DIR = DATA_DIR / 'test'\n",
     "\n",
     "BATCH_SIZE = 64"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_run_logdir():\n",
+    "    \"\"\"Generate path to new run log directory.\"\"\"\n",
+    "    return LOG_DIR / time.strftime('run_%Y-%m-%d_%H-%M-%S')"
    ]
   },
   {
@@ -77,7 +114,7 @@
    "source": [
     "(x_train_full, y_train_full), (x_test, y_test) = (\n",
     "    tf.keras.datasets.fashion_mnist.load_data()\n",
-    ")\n",
+    "    )\n",
     "print(f'Train Shape: {x_train_full.shape}')\n",
     "print(f'Train Data Type: {x_train_full.dtype}')"
    ]
@@ -106,7 +143,7 @@
     "    'sneaker',\n",
     "    'bag',\n",
     "    'ankle_boot',\n",
-    ")\n",
+    "    )\n",
     "classes_idx = {n: v for n, v in enumerate(classes)}"
    ]
   },
@@ -129,7 +166,7 @@
     "    test_size=0.1,\n",
     "    random_state=42,\n",
     "    stratify=y_train_full\n",
-    ")"
+    "    )"
    ]
   },
   {
@@ -161,7 +198,7 @@
     "    yaxis_title_text='Count',\n",
     "    bargroupgap=0.1,\n",
     "    barmode='group'\n",
-    ")\n",
+    "    )\n",
     "\n",
     "fig.show()"
    ]
@@ -214,7 +251,7 @@
     "    (x_train, y_train, TRAIN_DIR),\n",
     "    (x_val, y_val, VAL_DIR),\n",
     "    (x_test, y_test, TEST_DIR),\n",
-    ")\n",
+    "    )\n",
     "\n",
     "for x, y, directory in datasets:\n",
     "    print(f'Saving Dataset Images: {directory}')\n",
@@ -262,11 +299,20 @@
     "    TRAIN_DIR,\n",
     "    batch_size=BATCH_SIZE,\n",
     "    color_mode='grayscale',\n",
-    "    class_mode='categorical',\n",
+    "    class_mode='sparse',\n",
     "    seed=42,\n",
     "    shuffle=True,\n",
     "    target_size=(28, 28),\n",
-    ")"
+    "    )\n",
+    "\n",
+    "val_data_gen = im_gen_train.flow_from_directory(\n",
+    "    VAL_DIR,\n",
+    "    batch_size=BATCH_SIZE,\n",
+    "    color_mode='grayscale',\n",
+    "    class_mode='sparse',\n",
+    "    seed=42,\n",
+    "    target_size=(28, 28),\n",
+    "    )"
    ]
   },
   {
@@ -287,9 +333,101 @@
     "for n in range(10):\n",
     "    ax = plt.subplot(2, 5, n + 1)\n",
     "    ax.imshow(x[n], cmap='gray')\n",
-    "    ax.set_title(data_gen_classes[np.argmax(y[n])])\n",
+    "    ax.set_title(data_gen_classes[y[n]])\n",
     "    ax.axis('off')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Keras Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = tf.keras.Sequential([\n",
+    "    InputLayer(input_shape=(28, 28, 1)),\n",
+    "    Conv2D(filters=32, kernel_size=3, strides=(2, 2), activation='relu'),\n",
+    "    Conv2D(filters=64, kernel_size=3, strides=(2, 2), activation='relu'),\n",
+    "    Flatten(),\n",
+    "    Dense(10, activation='softmax'),\n",
+    "    ])\n",
+    "\n",
+    "model.compile(\n",
+    "    loss='sparse_categorical_crossentropy',\n",
+    "    optimizer='adam',\n",
+    "    metrics=['accuracy'],\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tf.keras.utils.plot_model(model)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Train Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tensorboard_cb = tf.keras.callbacks.TensorBoard(get_run_logdir())\n",
+    "history = model.fit(\n",
+    "    train_data_gen,\n",
+    "    epochs=15,\n",
+    "    steps_per_epoch=len(train_data_gen) // BATCH_SIZE,\n",
+    "    validation_data=val_data_gen,\n",
+    "    callbacks=[tensorboard_cb],\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Tensorboard"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%tensorboard --logdir LOG_DIR --port=6006"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
