ENH: add TensorBoard

--- a/notebooks/Hands-On Machine Learning with Scikit-Learn, Keras & TensorFlow/Chapter_10-Keras.ipynb
+++ b/notebooks/Hands-On Machine Learning with Scikit-Learn, Keras & TensorFlow/Chapter_10-Keras.ipynb
@@ -20,6 +20,7 @@
     "import hashlib\n",
     "from pathlib import Path\n",
     "import time\n",
+    "from typing import Optional\n",
     "\n",
     "import cv2\n",
     "import matplotlib.pyplot as plt\n",
@@ -93,9 +94,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_run_logdir():\n",
-    "    \"\"\"Generate path to new run log directory.\"\"\"\n",
-    "    return LOG_DIR / time.strftime('run_%Y-%m-%d_%H-%M-%S')"
+    "def get_run_logdir(desc: Optional[str] = None):\n",
+    "    \"\"\"\n",
+    "    Generate path to new run log directory.\n",
+    "    \n",
+    "    :param desc: run description\n",
+    "    :return: log file path with timestamp and optional description\n",
+    "    \"\"\"\n",
+    "    return LOG_DIR / time.strftime(f'{desc}_%Y_%m_%d_%H_%M_S')"
    ]
   },
   {
@@ -380,7 +386,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tf.keras.utils.plot_model(model)"
+    "tf.keras.utils.plot_model(model, to_file=DATA_DIR / 'model_plot.png')"
    ]
   },
   {
@@ -396,7 +402,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tensorboard_cb = tf.keras.callbacks.TensorBoard(get_run_logdir())\n",
+    "tensorboard_cb = tf.keras.callbacks.TensorBoard(\n",
+    "    get_run_logdir('baseline_cnn')\n",
+    "    )\n",
     "history = model.fit(\n",
     "    train_data_gen,\n",
     "    epochs=15,\n",
@@ -419,15 +427,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%tensorboard --logdir LOG_DIR --port=6006"
+    "%tensorboard --logdir $LOG_DIR --port=6006"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
