ENH: add test evaluation

--- a/notebooks/Hands-On Machine Learning with Scikit-Learn, Keras & TensorFlow/Chapter_10-Keras.ipynb
+++ b/notebooks/Hands-On Machine Learning with Scikit-Learn, Keras & TensorFlow/Chapter_10-Keras.ipynb
@@ -318,6 +318,15 @@
     "    class_mode='sparse',\n",
     "    seed=42,\n",
     "    target_size=(28, 28),\n",
+    "    )\n",
+    "\n",
+    "test_data_gen = im_gen_train.flow_from_directory(\n",
+    "    TEST_DIR,\n",
+    "    batch_size=BATCH_SIZE,\n",
+    "    color_mode='grayscale',\n",
+    "    class_mode='sparse',\n",
+    "    seed=42,\n",
+    "    target_size=(28, 28),\n",
     "    )"
    ]
   },
@@ -393,7 +402,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Train Model"
+    "### TensorBoard\n",
+    "\n",
+    "<br>\n",
+    "<font color=red>\n",
+    "    Start TensorBoard before fitting the model.\n",
+    "</font>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%tensorboard --logdir $LOG_DIR --port=6006"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Train Model\n",
+    "\n",
+    "`fit()` method\n",
+    "- if dataset is skewed add `class_weight` argument\n",
+    "- use `sample_weight` argument to if the reliability of the label is different per instance (experts evaluated some labels, while others were labeled by an angorithm)\n",
+    "\n",
+    "NOTE:\n",
+    "The time when Accuracy is calculated is not the same for the train dataset as the validation dataset.\n",
+    "- Validation: calculated ***end*** of each epoch\n",
+    "- Training: running mean ***durring*** each epoch\n",
+    "\n",
+    "To compensate the training metrics should be shifted by $\\frac{1}{2}$ an epoch to the left."
    ]
   },
   {
@@ -407,18 +448,25 @@
     "    )\n",
     "history = model.fit(\n",
     "    train_data_gen,\n",
-    "    epochs=15,\n",
-    "    steps_per_epoch=len(train_data_gen) // BATCH_SIZE,\n",
+    "    epochs=32,\n",
+    "    verbose=2,\n",
     "    validation_data=val_data_gen,\n",
+    "    validation_freq=4,\n",
     "    callbacks=[tensorboard_cb],\n",
-    "    )"
+    "    steps_per_epoch=2 * len(train_data_gen) // BATCH_SIZE,\n",
+    "    workers=2,\n",
+    "    use_multiprocessing=False,\n",
+    "    )\n",
+    "\n",
+    "training_history = pd.DataFrame(history.history)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Tensorboard"
+    "## Evaluate Test Set\n",
+    "- Estimate generalization error"
    ]
   },
   {
@@ -427,7 +475,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%tensorboard --logdir $LOG_DIR --port=6006"
+    "model.evaluate(test_data_gen)"
    ]
   }
  ],
