ENH: add functional model

--- a/notebooks/Hands-On Machine Learning with Scikit-Learn, Keras & TensorFlow/Chapter_10-Keras.ipynb
+++ b/notebooks/Hands-On Machine Learning with Scikit-Learn, Keras & TensorFlow/Chapter_10-Keras.ipynb
@@ -29,7 +29,7 @@
     "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
     "import tensorflow as tf\n",
-    "from tensorflow.keras.layers import Conv2D, Dense, Flatten, InputLayer\n",
+    "from tensorflow.keras.layers import Conv2D, Dense, Flatten, Input, InputLayer\n",
     "\n",
     "from tensorflow_2 import utils"
    ]
@@ -360,19 +360,66 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Sequential Model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = tf.keras.Sequential([\n",
+    "seq_model = tf.keras.Sequential([\n",
     "    InputLayer(input_shape=(28, 28, 1)),\n",
     "    Conv2D(filters=32, kernel_size=3, strides=(2, 2), activation='relu'),\n",
     "    Conv2D(filters=64, kernel_size=3, strides=(2, 2), activation='relu'),\n",
     "    Flatten(),\n",
     "    Dense(10, activation='softmax'),\n",
-    "    ])\n",
-    "\n",
+    "    ])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Functional Model\n",
+    "Allows multiple inputs and outputs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_0 = Input(shape=(28, 28, 1), name='input_0')\n",
+    "hidden_1 = Conv2D(filters=32, kernel_size=3, strides=(2, 2), activation='relu',\n",
+    "                  name='hidden_1')(input_0)\n",
+    "hidden_2 = Conv2D(filters=64, kernel_size=3, strides=(2, 2), activation='relu',\n",
+    "                  name='hidden_2')(hidden_1)\n",
+    "flatten = Flatten(name='flatten')(hidden_2)\n",
+    "output = Dense(10, activation='softmax', name='output')(flatten)\n",
+    "func_model = tf.keras.Model(inputs=[input_0], outputs=[output])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Compile Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# model = seq_model\n",
+    "model = func_model\n",
     "model.compile(\n",
     "    loss='sparse_categorical_crossentropy',\n",
     "    optimizer='adam',\n",
@@ -448,17 +495,15 @@
     "    )\n",
     "history = model.fit(\n",
     "    train_data_gen,\n",
-    "    epochs=32,\n",
-    "    verbose=2,\n",
+    "    epochs=64,\n",
+    "    verbose=4,\n",
     "    validation_data=val_data_gen,\n",
     "    validation_freq=4,\n",
     "    callbacks=[tensorboard_cb],\n",
     "    steps_per_epoch=2 * len(train_data_gen) // BATCH_SIZE,\n",
     "    workers=2,\n",
     "    use_multiprocessing=False,\n",
-    "    )\n",
-    "\n",
-    "training_history = pd.DataFrame(history.history)"
+    "    )"
    ]
   },
   {
