ENH: add confusion matrix callback

--- a/notebooks/Hands-On Machine Learning with Scikit-Learn, Keras & TensorFlow/Chapter_10-Keras.ipynb
+++ b/notebooks/Hands-On Machine Learning with Scikit-Learn, Keras & TensorFlow/Chapter_10-Keras.ipynb
@@ -20,11 +20,12 @@
     "import hashlib\n",
     "from pathlib import Path\n",
     "import time\n",
-    "from typing import Optional\n",
+    "from typing import Dict, Optional\n",
     "\n",
     "import cv2\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
+    "import plotly.express as px\n",
     "import plotly.graph_objects as go\n",
     "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -78,7 +79,9 @@
     "VAL_DIR = DATA_DIR / 'val'\n",
     "TEST_DIR = DATA_DIR / 'test'\n",
     "\n",
-    "BATCH_SIZE = 64"
+    "BATCH_SIZE = 64\n",
+    "EPOCHS = 64\n",
+    "VAL_FREQ = 16"
    ]
   },
   {
@@ -281,7 +284,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Preprocess Data"
+    "### Create Data Generators"
    ]
   },
   {
@@ -311,7 +314,7 @@
     "    target_size=(28, 28),\n",
     "    )\n",
     "\n",
-    "val_data_gen = im_gen_train.flow_from_directory(\n",
+    "val_data_gen = im_gen_val.flow_from_directory(\n",
     "    VAL_DIR,\n",
     "    batch_size=BATCH_SIZE,\n",
     "    color_mode='grayscale',\n",
@@ -320,7 +323,7 @@
     "    target_size=(28, 28),\n",
     "    )\n",
     "\n",
-    "test_data_gen = im_gen_train.flow_from_directory(\n",
+    "test_data_gen = im_gen_val.flow_from_directory(\n",
     "    TEST_DIR,\n",
     "    batch_size=BATCH_SIZE,\n",
     "    color_mode='grayscale',\n",
@@ -458,6 +461,103 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Create Confusion Matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def log_confusion_matrix(epoch, logs=None):\n",
+    "    \"\"\"Save confussion matrix to be displayed in TensorBoard.\"\"\"\n",
+    "    if epoch > 0 and epoch % VAL_FREQ == 0:\n",
+    "        predict = np.argmax(model.predict(val_data_gen), axis=1)\n",
+    "        cm = tf.math.confusion_matrix(val_data_gen.classes, predict)\n",
+    "        fig = confusion_matrix_fig(cm, classes_idx)\n",
+    "        cm_image = static_image(fig)\n",
+    "\n",
+    "        file_writer = tf.summary.create_file_writer(str(LOG_DIR / 'cm'))\n",
+    "        with file_writer.as_default():\n",
+    "            tf.summary.image(\"Confusion Matrix\", cm_image, epoch)\n",
+    "\n",
+    "        \n",
+    "def confusion_matrix_fig(cm: tf.Tensor, classes: Dict[int, str]):\n",
+    "    \"\"\"\n",
+    "    Generate confusion matrix figure.\n",
+    "    \n",
+    "    :param cm: confusion matrix (r, c = actual, predicted)\n",
+    "    :param classes: dictionary with class index as key and class name as value\n",
+    "    :return: confusion matrix figure\n",
+    "    \"\"\"\n",
+    "    normalized = cm / tf.math.reduce_sum(cm, axis=1, keepdims=True)\n",
+    "    normalized = tf.linalg.set_diag(normalized, np.zeros((normalized.shape[0])))\n",
+    "    fig = px.imshow(\n",
+    "        normalized,\n",
+    "        color_continuous_scale='gray',\n",
+    "        labels=dict(x='Predicted', y='Actual', color='Error Rate'),\n",
+    "        title='Confusion Matrix Error Rates',\n",
+    "        x=list(range(10)),\n",
+    "        y=list(range(10)),\n",
+    "        )\n",
+    "\n",
+    "    fig.update_layout(\n",
+    "        title_text='Confusion Matrix',\n",
+    "        xaxis=dict(\n",
+    "            title='Predicted Class',\n",
+    "            tickvals=tuple(classes.keys()),\n",
+    "            ticktext=tuple(classes.values()),\n",
+    "        ),\n",
+    "        yaxis=dict(\n",
+    "            title='Actual Class',\n",
+    "            tickvals=tuple(classes.keys()),\n",
+    "            ticktext=tuple(classes.values()),\n",
+    "        ),\n",
+    "        )\n",
+    "    \n",
+    "    return fig\n",
+    "\n",
+    "\n",
+    "def static_image(fig, channels: int = 1):\n",
+    "    \"\"\"\n",
+    "    Convert Plotly figure to a static image.\n",
+    "    \n",
+    "    :param fig: Plotyly figure\n",
+    "    :param channels: number of channels in figure\n",
+    "    \"\"\"\n",
+    "    im_bytes = fig.to_image(format='png')\n",
+    "    tf_im = tf.image.decode_png(im_bytes, channels)\n",
+    "    return tf.expand_dims(tf_im, 0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Create Sample Images for TensorBoard"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Start TensorBoard"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -490,16 +590,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "confusion_matrix_cb = tf.keras.callbacks.LambdaCallback(\n",
+    "    on_epoch_end=log_confusion_matrix\n",
+    "    )\n",
     "tensorboard_cb = tf.keras.callbacks.TensorBoard(\n",
     "    get_run_logdir('baseline_cnn')\n",
     "    )\n",
+    "\n",
     "history = model.fit(\n",
     "    train_data_gen,\n",
-    "    epochs=64,\n",
+    "    epochs=EPOCHS,\n",
     "    verbose=4,\n",
     "    validation_data=val_data_gen,\n",
-    "    validation_freq=4,\n",
-    "    callbacks=[tensorboard_cb],\n",
+    "    validation_freq=VAL_FREQ,\n",
+    "    callbacks=[\n",
+    "        tensorboard_cb,\n",
+    "        confusion_matrix_cb,\n",
+    "    ],\n",
     "    steps_per_epoch=2 * len(train_data_gen) // BATCH_SIZE,\n",
     "    workers=2,\n",
     "    use_multiprocessing=False,\n",
