ENH: add checkpoint and early stopping callbacks

--- a/notebooks/Hands-On Machine Learning with Scikit-Learn, Keras & TensorFlow/Chapter_10-Keras.ipynb
+++ b/notebooks/Hands-On Machine Learning with Scikit-Learn, Keras & TensorFlow/Chapter_10-Keras.ipynb
@@ -80,7 +80,7 @@
     "TEST_DIR = DATA_DIR / 'test'\n",
     "\n",
     "BATCH_SIZE = 64\n",
-    "EPOCHS = 64\n",
+    "EPOCHS = 1024\n",
     "VAL_FREQ = 16"
    ]
   },
@@ -481,7 +481,7 @@
     "        fig = confusion_matrix_fig(cm, classes_idx)\n",
     "        cm_image = static_image(fig)\n",
     "\n",
-    "        file_writer = tf.summary.create_file_writer(str(LOG_DIR / 'cm'))\n",
+    "        file_writer = tf.summary.create_file_writer(str(get_run_logdir('cm')))\n",
     "        with file_writer.as_default():\n",
     "            tf.summary.image(\"Confusion Matrix\", cm_image, epoch)\n",
     "\n",
@@ -560,10 +560,45 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "%tensorboard --logdir $LOG_DIR --port=6006"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Callbacks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "checkpoint_cb = tf.keras.callbacks.ModelCheckpoint(\n",
+    "    DATA_DIR / 'model_ckpt.h5',\n",
+    "    save_freq=32,\n",
+    "    )\n",
+    "\n",
+    "confusion_matrix_cb = tf.keras.callbacks.LambdaCallback(\n",
+    "    on_epoch_end=log_confusion_matrix\n",
+    "    )\n",
+    "\n",
+    "early_stopping_cb = tf.keras.callbacks.EarlyStopping(\n",
+    "    monitor='loss',\n",
+    "    patience=16,\n",
+    "    restore_best_weights=True,\n",
+    "    )\n",
+    "\n",
+    "tensorboard_cb = tf.keras.callbacks.TensorBoard(\n",
+    "    get_run_logdir('baseline_cnn')\n",
+    "    )"
    ]
   },
   {
@@ -590,13 +625,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "confusion_matrix_cb = tf.keras.callbacks.LambdaCallback(\n",
-    "    on_epoch_end=log_confusion_matrix\n",
-    "    )\n",
-    "tensorboard_cb = tf.keras.callbacks.TensorBoard(\n",
-    "    get_run_logdir('baseline_cnn')\n",
-    "    )\n",
-    "\n",
     "history = model.fit(\n",
     "    train_data_gen,\n",
     "    epochs=EPOCHS,\n",
@@ -604,8 +632,10 @@
     "    validation_data=val_data_gen,\n",
     "    validation_freq=VAL_FREQ,\n",
     "    callbacks=[\n",
-    "        tensorboard_cb,\n",
+    "        checkpoint_cb,\n",
     "        confusion_matrix_cb,\n",
+    "        early_stopping_cb,\n",
+    "        tensorboard_cb,\n",
     "    ],\n",
     "    steps_per_epoch=2 * len(train_data_gen) // BATCH_SIZE,\n",
     "    workers=2,\n",
@@ -628,6 +658,22 @@
    "outputs": [],
    "source": [
     "model.evaluate(test_data_gen)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Save Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.save(DATA_DIR / \"best_model.h5\")"
    ]
   }
  ],
