ENH: compile model after load
This is necessary due to a bug in Keras where the model does not load
properly.

--- a/notebooks/Hands-On Machine Learning with Scikit-Learn, Keras & TensorFlow/Chapter_10-Keras.ipynb
+++ b/notebooks/Hands-On Machine Learning with Scikit-Learn, Keras & TensorFlow/Chapter_10-Keras.ipynb
@@ -81,7 +81,10 @@
     "\n",
     "BATCH_SIZE = 64\n",
     "EPOCHS = 1024\n",
-    "VAL_FREQ = 16"
+    "VAL_FREQ = 16\n",
+    "\n",
+    "BEST_MODEL = DATA_DIR / \"best_model.h5\"\n",
+    "MODEL_CKPT = DATA_DIR / \"model_ckpt.h5\""
    ]
   },
   {
@@ -412,7 +415,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Compile Model"
+    "### Compile Model\n",
+    "\n",
+    "<br>\n",
+    "<font color='red'>\n",
+    "    WARNING:<br>\n",
+    "    With the current version of Keras if a saved model is loaded and not compiled inference scores are random.\n",
+    "</font>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compile_model(m):\n",
+    "    return m.compile(\n",
+    "        loss='sparse_categorical_crossentropy',\n",
+    "        optimizer='adam',\n",
+    "        metrics=['accuracy'],\n",
+    "        )"
    ]
   },
   {
@@ -423,11 +446,13 @@
    "source": [
     "# model = seq_model\n",
     "model = func_model\n",
-    "model.compile(\n",
-    "    loss='sparse_categorical_crossentropy',\n",
-    "    optimizer='adam',\n",
-    "    metrics=['accuracy'],\n",
-    "    )"
+    "\n",
+    "if BEST_MODEL.exists():\n",
+    "    model = tf.keras.models.load_model(BEST_MODEL)\n",
+    "elif MODEL_CKPT.exists():\n",
+    "    model = tf.keras.models.load_model(MODEL_CKPT)\n",
+    "\n",
+    "compile_model(model)"
    ]
   },
   {
@@ -481,7 +506,7 @@
     "        fig = confusion_matrix_fig(cm, classes_idx)\n",
     "        cm_image = static_image(fig)\n",
     "\n",
-    "        file_writer = tf.summary.create_file_writer(str(get_run_logdir('cm')))\n",
+    "        file_writer = tf.summary.create_file_writer(str(LOG_DIR / 'cm'))\n",
     "        with file_writer.as_default():\n",
     "            tf.summary.image(\"Confusion Matrix\", cm_image, epoch)\n",
     "\n",
@@ -561,7 +586,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -582,7 +607,7 @@
    "outputs": [],
    "source": [
     "checkpoint_cb = tf.keras.callbacks.ModelCheckpoint(\n",
-    "    DATA_DIR / 'model_ckpt.h5',\n",
+    "    MODEL_CKPT,\n",
     "    save_freq=32,\n",
     "    )\n",
     "\n",
@@ -664,7 +689,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Save Model"
+    "## Save Model"
    ]
   },
   {
@@ -673,7 +698,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.save(DATA_DIR / \"best_model.h5\")"
+    "model.save(BEST_MODEL, save_format='h5')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_model = tf.keras.models.load_model(BEST_MODEL)\n",
+    "compile_model(best_model)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Verify Results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_model.evaluate(test_data_gen)"
    ]
   }
  ],
